--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse--424007610\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1024696963\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral" hash-for-method="verifyDrillbacksGeneral">verifyDrillbacksGeneral</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer" hash-for-method="testaccountbalanceresponseforInvalidCustomer">testaccountbalanceresponseforInvalidCustomer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral</span>
+              <span class="class-name">com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyDrillbacksGeneral">
-                  </a> <!-- verifyDrillbacksGeneral -->
-                  <span class="method-name">verifyDrillbacksGeneral</span>
+                  <a name="testaccountbalanceresponseforInvalidCustomer">
+                  </a> <!-- testaccountbalanceresponseforInvalidCustomer -->
+                  <span class="method-name">testaccountbalanceresponseforInvalidCustomer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse--424007610\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1024696963\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral&quot;/&gt;
+      &lt;class name=&quot;com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyDrillbacksGeneral')
-data.setCell(0, 2, 'com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral')
-data.setCell(0, 3, 19957);
+data.setCell(0, 1, 'testaccountbalanceresponseforInvalidCustomer')
+data.setCell(0, 2, 'com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer')
+data.setCell(0, 3, 1953);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,80 +204,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">verifyDrillbacksGeneral</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Angular Request Completed in 63ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: username] displayed in 98ms</span>
-                <span class="reporter-method-output">Login Page title Verified</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: username] displayed in 27ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: password] displayed in 46ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: kc-login] displayed in 43ms</span>
-                <span class="reporter-method-output">Angular Request Completed in 31ms</span>
-                <span class="reporter-method-output">User signed Admin</span>
-                <span class="reporter-method-output">Enter Text for Search =LOC@0004</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SRCH_Input] displayed in 101ms</span>
-                <span class="reporter-method-output">Angular request time 761ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SRCH_Option_1_Address_Line] displayed in 121ms</span>
-                <span class="reporter-method-output">Click Customer</span>
-                <span class="reporter-method-output">Angular request time 328ms</span>
-                <span class="reporter-method-output">Angular request time 16ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: 'LOC_Location_Id'] displayed in 58ms</span>
-                <span class="reporter-method-output">Angular request time 12ms</span>
-                <span class="reporter-method-output">got Text CustomerLocId = LOC@0004</span>
-                <span class="reporter-method-output">Customer Location Id found LOC@0004</span>
-                <span class="reporter-method-output">Strings Matched: LOC@0004 = LOC@0004</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Drillback] displayed in 42ms</span>
-                <span class="reporter-method-output">Strings Matched: cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=CustomerMaintenance&CustomerID=0000011111&LocationID=LOC@0004&CogsDrillback=1 = cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=CustomerMaintenance&CustomerID=0000011111&LocationID=LOC@0004&CogsDrillback=1</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACCIT_1_Drillback] displayed in 44ms</span>
-                <span class="reporter-method-output">Strings Matched: cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=ContactLog&CustomerID=0000011111&LocationID=LOC@0004&ContactLog=1&CogsDrillback=1 = cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=ContactLog&CustomerID=0000011111&LocationID=LOC@0004&ContactLog=1&CogsDrillback=1</span>
-                <span class="reporter-method-output">Click Action Dropdown</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Button] displayed in 51ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Button] displayed in 24ms</span>
-                <span class="reporter-method-output">Angular request time 16ms</span>
-                <span class="reporter-method-output">Click Action Drop down</span>
-                <span class="reporter-method-output">Angular request time 11ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Cashiering] displayed in 58ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Credit_Memo] displayed in 51ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Deposit] displayed in 51ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Misc._Charge] displayed in 40ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Payment_Arrangement] displayed in 27ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Payment_Extension] displayed in 24ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Void] displayed in 35ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Contact_Log] displayed in 32ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Meter_Reading] displayed in 30ms</span>
-                <span class="reporter-method-output">Verify Action Drillbacks</span>
-                <span class="reporter-method-output">Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=SecondaryCustomer&LocationID=LOC@0004&CustomerID=0000011111&Address=1  Water ALY  BLDG 1 NEW SMYRNA  BEACH FL 123123&CustName=Mr. Auto Contact&CogsDrillback=1</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SCUST_Drillback] displayed in 62ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SRCH_Input] displayed in 70ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SRCH_Input] displayed in 28ms</span>
-                <span class="reporter-method-output">Setting Text on Search Text with Text = LOC@0001</span>
-                <span class="reporter-method-output">Angular request time 15ms</span>
-                <span class="reporter-method-output">Search Text</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SRCH_Option_1_Customer_Name] displayed in 703ms</span>
-                <span class="reporter-method-output">Click DashBoard Search Result </span>
-                <span class="reporter-method-output">Angular request time 1449ms</span>
-                <span class="reporter-method-output">Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=229&Act=OPEN&Func=LocationAccountServices&CustomerID=DRILBACK&LocationID=LOC@0001&CogsDrillback=1</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: SERV_Tab_Drillback] displayed in 66ms</span>
-                <span class="reporter-method-output">Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=0&Act=OPEN&Func=EnhansedNote&NoteID=DRILBACK&NoteIndex=49.00000&CogsDrillback=1</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: customer-person] displayed in 35ms</span>
-                <span class="reporter-method-output">Verifying Drill back for cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&Prod=0&Act=OPEN&Func=EnhansedNote&NoteID=LOC@0001&NoteIndex=52.00000&CogsDrillback=1</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ENH_Location_Drillback] displayed in 62ms</span>
-                <span class="reporter-method-output">Angular request time 16ms</span>
-                <span class="reporter-method-output">Angular request time 20ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: USR_Name] displayed in 58ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: USR_Name] displayed in 43ms</span>
-                <span class="reporter-method-output">Angular request time 16ms</span>
-                <span class="reporter-method-output">Click Logged User Link</span>
-                <span class="reporter-method-output">Angular request time 12ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Logout] displayed in 58ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (889caac63ff7c564c48cfb3233e6a27a)] -> id: ACTION_Logout] displayed in 93ms</span>
-                <span class="reporter-method-output">Angular request time 40ms</span>
-                <span class="reporter-method-output">Click logout Link</span>
-                <span class="reporter-method-output">Angular request time 19ms</span>
-                <span class="reporter-method-output">Angular request time 16ms</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -293,19 +219,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">readProp(org.testng.TestRunner@1ec7d8b3)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyDrillbacksGeneral</span>
-                <span class="method-start">3907 ms</span>
+                <span class="method-name">testaccountbalanceresponseforInvalidCustomer</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">TearDown</span>
-                <span class="method-start">23864 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
