--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67c1fc">  <td>19/10/17 09:55:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@408d971b]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718187988</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>19/10/17 09:55:42</td>   <td>3891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0018_verifyDrillbacksGeneral.verifyDrillbacksGeneral()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@408d971b]">verifyDrillbacksGeneral</td> 
-  <td>main@718187988</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>19/10/17 09:56:02</td>   <td>23848</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0018_verifyDrillbacksGeneral@408d971b]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718187988</td>   <td></td> </tr>
+<tr bgcolor="d2b987">  <td>19/10/22 03:56:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_getaccountbalanceInvalidCustomer.testaccountbalanceresponseforInvalidCustomer()[pri:0, instance:com.NexusPortalAutomation.apiTestCases.Java.TC0002_getaccountbalanceInvalidCustomer@13805618]">testaccountbalanceresponseforInvalidCustomer</td> 
+  <td>main@1535634836</td>   <td></td> </tr>
 </table>
